@@ -159,15 +159,27 @@ value ocaml_class_field loc cfd =
 
 value ocaml_mktyp loc x =
   IFDEF OCAML_VERSION < OCAML_4_02_0 THEN {ptyp_desc = x; ptyp_loc = loc}
-  ELSE {ptyp_desc = x; ptyp_loc = loc; ptyp_attributes = []} END
+  ELSIFDEF OCAML_VERSION < OCAML_4_08_0 THEN
+    {ptyp_desc = x; ptyp_loc = loc; ptyp_attributes = []}
+  ELSE
+    {ptyp_desc = x; ptyp_loc = loc; ptyp_loc_stack = []; ptyp_attributes = []}
+  END
 ;
 value ocaml_mkpat loc x =
   IFDEF OCAML_VERSION < OCAML_4_02_0 THEN {ppat_desc = x; ppat_loc = loc}
-  ELSE {ppat_desc = x; ppat_loc = loc; ppat_attributes = []} END
+  ELSIFDEF OCAML_VERSION < OCAML_4_08_0 THEN
+    {ppat_desc = x; ppat_loc = loc; ppat_attributes = []}
+  ELSE
+    {ppat_desc = x; ppat_loc = loc; ppat_loc_stack = []; ppat_attributes = []}
+  END
 ;
 value ocaml_mkexp loc x =
   IFDEF OCAML_VERSION < OCAML_4_02_0 THEN {pexp_desc = x; pexp_loc = loc}
-  ELSE {pexp_desc = x; pexp_loc = loc; pexp_attributes = []} END
+  ELSIFDEF OCAML_VERSION < OCAML_4_08_0 THEN
+    {pexp_desc = x; pexp_loc = loc; pexp_attributes = []}
+  ELSE
+    {pexp_desc = x; pexp_loc = loc; pexp_loc_stack = []; pexp_attributes = []}
+  END
 ;
 value ocaml_mkmty loc x =
   IFDEF OCAML_VERSION < OCAML_4_02_0 THEN {pmty_desc = x; pmty_loc = loc}
@@ -697,17 +709,16 @@ value mkexp_ocaml_pexp_construct_arity loc li_loc li al =
   let a = ocaml_mkexp loc (Pexp_tuple al) in
   IFDEF OCAML_VERSION < OCAML_4_02_0 THEN
     ocaml_mkexp loc (ocaml_pexp_construct li_loc li (Some a) True)
-  ELSE
+  ELSIFDEF OCAML_VERSION < OCAML_4_08_0 THEN
     {pexp_desc = ocaml_pexp_construct li_loc li (Some a) True;
      pexp_loc = loc;
+     pexp_attributes = [(mkloc loc "ocaml.explicit_arity", PStr [])]}
+  ELSE
+    {pexp_desc = ocaml_pexp_construct li_loc li (Some a) True;
+     pexp_loc = loc; pexp_loc_stack = [];
      pexp_attributes =
-       IFDEF OCAML_VERSION < OCAML_4_08_0 THEN
-         [(mkloc loc "ocaml.explicit_arity", PStr [])]
-       ELSE
-         [{attr_name = mkloc loc "ocaml.explicit_arity";
-           attr_payload = PStr [];
-           attr_loc = loc}]
-       END}
+       [{attr_name = mkloc loc "ocaml.explicit_arity";
+         attr_payload = PStr []; attr_loc = loc}]}
   END
 ;
 
@@ -872,18 +883,18 @@ value mkpat_ocaml_ppat_construct_arity loc li_loc li al =
   IFDEF OCAML_VERSION < OCAML_4_02_0 THEN
     let a = ocaml_mkpat loc (Ppat_tuple al) in
     ocaml_mkpat loc (ocaml_ppat_construct li_loc li (Some a) True)
-  ELSE
+  ELSIFDEF OCAML_VERSION < OCAML_4_08_0 THEN
     let a = ocaml_mkpat loc (Ppat_tuple al) in
     {ppat_desc = ocaml_ppat_construct li_loc li (Some a) True;
      ppat_loc = loc;
+     ppat_attributes = [(mkloc loc "ocaml.explicit_arity", PStr [])]}
+  ELSE
+    let a = ocaml_mkpat loc (Ppat_tuple al) in
+    {ppat_desc = ocaml_ppat_construct li_loc li (Some a) True;
+     ppat_loc = loc; ppat_loc_stack = [];
      ppat_attributes =
-       IFDEF OCAML_VERSION < OCAML_4_08_0 THEN
-         [(mkloc loc "ocaml.explicit_arity", PStr [])]
-       ELSE
-         [{attr_name = mkloc loc "ocaml.explicit_arity";
-           attr_payload = PStr [];
-           attr_loc = loc}]
-       END}
+       [{attr_name = mkloc loc "ocaml.explicit_arity";
+         attr_payload = PStr []; attr_loc = loc}]}
   END
 ;
 
